ci: update GitVersion configuration to set label for main branch; improve package version determination logic

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -8,7 +8,7 @@ branches:
   main:
     regex: ^main$
     increment: Patch
-    label: ''
+    label: ci
   feature:
     regex: ^(feature|feat|bugfix|fix|chore)[/-]
     increment: Inherit
