--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -112,41 +112,23 @@ jobs:
       - name: Determine Package Version (GitVersion)
         id: gitversion
         uses: gittools/actions/gitversion/execute@v2
-        continue-on-error: true
         with:
           useConfigFile: true
           configFilePath: GitVersion.yml
           verbosity: Diagnostic
           additionalArguments: /nofetch
 
-      - name: Set PackageVersion env (from action or CLI)
+      - name: Set PackageVersion env (NuGetVersionV2 or majorMinorPatch)
         id: set_pkg_version
         shell: bash
         run: |
           set -euo pipefail
-          # Prefer NuGetVersionV2, fall back to NuGetVersion, then SemVer, then FullSemVer
+          # Prefer NuGetVersionV2 from GitVersion; if missing, fall back to majorMinorPatch
           ver='${{ steps.gitversion.outputs.NuGetVersionV2 }}'
-          if [ -z "$ver" ]; then ver='${{ steps.gitversion.outputs.NuGetVersion }}'; fi
-          if [ -z "$ver" ]; then ver='${{ steps.gitversion.outputs.SemVer }}'; fi
-          if [ -z "$ver" ]; then ver='${{ steps.gitversion.outputs.FullSemVer }}'; fi
+          if [ -z "$ver" ]; then ver='${{ steps.gitversion.outputs.MajorMinorPatch }}'; fi
           if [ -z "$ver" ]; then
-            echo "GitVersion action outputs empty; falling back to GitVersion CLI"
-            # Use CLI to compute JSON and parse version in the same preference order
-            timeout 90s dotnet-gitversion . /output json /config GitVersion.yml /verbosity Diagnostic /nofetch > gv.json
-            ver=$(node -e '
-              const fs = require("fs");
-              try {
-                const j = JSON.parse(fs.readFileSync("gv.json","utf8"));
-                const v = j.NuGetVersionV2 || j.NuGetVersion || j.SemVer || j.FullSemVer || "";
-                if (!v) process.exit(1);
-                console.log(v);
-              } catch (e) { process.exit(1); }
-            ')
-            if [ -z "$ver" ]; then
-              echo "ERROR: GitVersion CLI did not produce a usable version (NuGetVersionV2/NuGetVersion/SemVer/FullSemVer). Failing build." >&2
-              echo "--- gv.json ---"; cat gv.json || true
-              exit 1
-            fi
+            echo "ERROR: GitVersion did not produce NuGetVersionV2 or majorMinorPatch. Failing build." >&2
+            exit 1
           fi
           echo "Using package version: $ver"
           echo "PKG_VERSION=$ver" >> "$GITHUB_ENV"
