--- a/NuGet.Config
+++ b/NuGet.Config
@@ -6,7 +6,7 @@
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="local-shimgen" value=".nuget-local" />
+    <add key="local-shimgen" value=".nupkgs" />
     <add key="local-ci" value=".nupkgs" />
   </packageSources>
 </configuration>
