refactor: moved ExampleProject to subfolder

--- a/ExampleProject/NuGet.Config
+++ b/ExampleProject/NuGet.Config
@@ -2,11 +2,11 @@
 <configuration>
   <config>
     <!-- Shorten NuGet global packages folder to avoid MAX_PATH issues on Windows -->
-    <add key="globalPackagesFolder" value=".nuget" />
+    <add key="globalPackagesFolder" value="../.nuget" />
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="local-shimgen" value=".nupkgs" />
-    <add key="local-ci" value=".nupkgs" />
+    <add key="local-shimgen" value="../.nupkgs" />
+    <add key="local-ci" value="../.nupkgs" />
   </packageSources>
 </configuration>
