--- a/ExampleProject/FsharpWithShim.csproj
+++ b/ExampleProject/FsharpWithShim.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <!-- Keep paths EXACTLY as they are on disk -->
-    <ProjectReference Include="FSharp\\FsharpWithShim.FSharp.fsproj">
+    <ProjectReference Include="..\\FSharp\\FsharpWithShim.FSharp.fsproj">
       <!-- Reference for compile so generated shims can see F# types, but do not copy to output. -->
       <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
     </ProjectReference>
@@ -26,7 +26,7 @@
     </PackageReference>
     <!-- When developing locally (targets present in repo), exclude package's build assets to avoid duplicate targets. -->
     <PackageReference Update="Headsetsniper.Godot.FSharp.ShimGen"
-                      Condition="Exists('ShimGen\buildTransitive\Headsetsniper.Godot.FSharp.ShimGen.targets')">
+                      Condition="Exists('..\ShimGen\buildTransitive\Headsetsniper.Godot.FSharp.ShimGen.targets')">
       <ExcludeAssets>build;buildTransitive</ExcludeAssets>
     </PackageReference>
   </ItemGroup>
@@ -41,13 +41,13 @@
 
   <!-- Development convenience: if a locally built ShimGen exists, use it instead of the packaged one. -->
   <PropertyGroup>
-    <_LocalShimGenDll>$(MSBuildProjectDirectory)\ShimGen\bin\$(Configuration)\$(TargetFramework)\ShimGen.dll</_LocalShimGenDll>
+    <_LocalShimGenDll>$(MSBuildProjectDirectory)\..\ShimGen\bin\$(Configuration)\$(TargetFramework)\ShimGen.dll</_LocalShimGenDll>
     <ShimGenDll Condition="Exists('$(_LocalShimGenDll)')">$(_LocalShimGenDll)</ShimGenDll>
   </PropertyGroup>
 
   <!-- Development convenience: import local targets so GenerateFSharpShims is available even before packing the NuGet. -->
-  <Import Project="ShimGen\buildTransitive\Headsetsniper.Godot.FSharp.ShimGen.targets"
-          Condition="Exists('ShimGen\buildTransitive\Headsetsniper.Godot.FSharp.ShimGen.targets')" />
+  <Import Project="..\ShimGen\buildTransitive\Headsetsniper.Godot.FSharp.ShimGen.targets"
+          Condition="Exists('..\ShimGen\buildTransitive\Headsetsniper.Godot.FSharp.ShimGen.targets')" />
 
   <!-- Ensure the package's GenerateFSharpShims target runs as part of Build -->
   <Target Name="EnsureShims" DependsOnTargets="GenerateFSharpShims" />
